Refactor REST verbs to align with RESTFul design
